@@ -19,15 +19,23 @@ package com.generalbytes.batm.server.extensions.extra.liquidbitcoin;
 
 import com.generalbytes.batm.common.currencies.CryptoCurrency;
 import com.generalbytes.batm.common.currencies.FiatCurrency;
-import com.generalbytes.batm.server.extensions.*;
-import com.generalbytes.batm.server.extensions.FixPriceRateSource;
+import com.generalbytes.batm.server.extensions.AbstractExtension;
 import com.generalbytes.batm.server.extensions.ExtensionsUtil;
+import com.generalbytes.batm.server.extensions.FixPriceRateSource;
+import com.generalbytes.batm.server.extensions.ICryptoAddressValidator;
+import com.generalbytes.batm.server.extensions.ICryptoCurrencyDefinition;
+import com.generalbytes.batm.server.extensions.IRateSource;
+import com.generalbytes.batm.server.extensions.IWallet;
 import com.generalbytes.batm.server.extensions.extra.liquidbitcoin.wallets.elementsd.ElementsdRPCWalletWithUniqueAddresses;
+import lombok.extern.slf4j.Slf4j;
 
 import java.math.BigDecimal;
 import java.net.InetSocketAddress;
-import java.util.*;
+import java.util.HashSet;
+import java.util.Set;
+import java.util.StringTokenizer;
 
+@Slf4j
 public class LiquidBitcoinExtension extends AbstractExtension {
     private static final ICryptoCurrencyDefinition DEFINITION = new LiquidBitcoinDefinition();
 
@@ -39,7 +47,7 @@ public class LiquidBitcoinExtension extends AbstractExtension {
     @Override
     public IWallet createWallet(String walletLogin, String tunnelPassword) {
         try {
-            if (walletLogin != null && !walletLogin.trim().isEmpty()) {
+            if (walletLogin != null && !walletLogin.isBlank()) {
                 StringTokenizer st = new StringTokenizer(walletLogin, ":");
                 String walletType = st.nextToken();
 
@@ -84,24 +92,15 @@ public class LiquidBitcoinExtension extends AbstractExtension {
 
     @Override
     public IRateSource createRateSource(String sourceLogin) {
-        if (sourceLogin != null && !sourceLogin.trim().isEmpty()) {
+        if (sourceLogin != null && !sourceLogin.isBlank()) {
             try {
                 StringTokenizer st = new StringTokenizer(sourceLogin, ":");
                 String exchangeType = st.nextToken();
 
                 if ("l_btcfix".equalsIgnoreCase(exchangeType)) {
-                    BigDecimal rate = BigDecimal.ZERO;
-                    if (st.hasMoreTokens()) {
-                        try {
-                            rate = new BigDecimal(st.nextToken());
-                        } catch (Throwable e) {
-                        }
-                    }
-                    String preferedFiatCurrency = FiatCurrency.USD.getCode();
-                    if (st.hasMoreTokens()) {
-                        preferedFiatCurrency = st.nextToken().toUpperCase();
-                    }
-                    return new FixPriceRateSource(rate, preferedFiatCurrency);
+                    BigDecimal rate = getRate(st);
+                    String preferredFiatCurrency = getPreferredFiatCurrency(st);
+                    return new FixPriceRateSource(rate, preferredFiatCurrency);
                 }
             } catch (Exception e) {
                 ExtensionsUtil.logExtensionParamsException("createRateSource", getClass().getSimpleName(), sourceLogin, e);
@@ -110,13 +109,33 @@ public class LiquidBitcoinExtension extends AbstractExtension {
         }
         return null;
     }
+
+    private String getPreferredFiatCurrency(StringTokenizer st) {
+        String preferredFiatCurrency = FiatCurrency.USD.getCode();
+        if (st.hasMoreTokens()) {
+            preferredFiatCurrency = st.nextToken().toUpperCase();
+        }
+        return preferredFiatCurrency;
+    }
+
+    private BigDecimal getRate(StringTokenizer st) {
+        BigDecimal rate = BigDecimal.ZERO;
+        if (st.hasMoreTokens()) {
+            try {
+                rate = new BigDecimal(st.nextToken());
+            } catch (Exception e) {
+                log.warn("Failed to get fix rate for L-BTC, using default 0", e);
+            }
+        }
+        return rate;
+    }
+
     @Override
     public Set<String> getSupportedCryptoCurrencies() {
-        Set<String> result = new HashSet<String>();
+        Set<String> result = new HashSet<>();
         result.add(CryptoCurrency.L_BTC.getCode());
         return result;
     }
-
 
     @Override
     public Set<ICryptoCurrencyDefinition> getCryptoCurrencyDefinitions() {
